--- a/404.md
+++ b/404.md
@@ -1,15 +1,7 @@
 ---
 layout: page
-title: "Page Not Found"
-description: "Page not found. Your pixels are in another canvas."
+title: "啊哦，该页不存在..."
+description: "Page not found."
 ---  
 
-Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
-
-<script type="text/javascript">
-  var GOOG_FIXURL_LANG = 'en';
-  var GOOG_FIXURL_SITE = '{{ site.url }}'
-</script>
-<script type="text/javascript"
-  src="http://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js">
-</script>
+<iframe scrolling='no' frameborder='0' src='http://yibo.iyiyun.com/Home/Distribute/ad404/key/3404' width='655' height='390' style='display:block;'></iframe>
