--- a/_posts/2013-08-15-why-ruby.md
+++ b/_posts/2013-08-15-why-ruby.md
@@ -18,7 +18,7 @@ link: http://book.douban.com/subject/6756090/
 
 与众多其他的主流语言比起来，Ruby的目标是让人享受编程的快乐。因此Ruby博采众长，成为了一门我又熟悉又陌生的语言。这些陌生虽不影响使用，但是不经让人好奇它内部实现的机理。很可惜一直没找到合适的书籍，直到终于下载到电子版的《松本行弘的程序世界》。
 
-今天的人人上有人分享了一篇《How to leave academia》，里面提到Ruby同Python完全没有可比性，因为Python有Scipy这样的科学计算库。不得不承认Python社区之大，应用之广泛，但是稍微搜索一下可以发现名字略山寨的SciRuby项目业已启动，而且加入了Google Summer Code 2013。
+今天的人人上有人分享了一篇[《How to leave academia》](http://www.chrisstucchio.com/blog/2012/leaving_academia.html)，里面提到Ruby同Python完全没有可比性，因为Python有Scipy这样的科学计算库。不得不承认Python社区之大，应用之广泛，但是稍微搜索一下可以发现名字略山寨的SciRuby项目业已启动，而且加入了Google Summer Code 2013。
 
 商业界有太多追求资本和价值而忽视人性的哲学，对于纯粹的人来说，兴趣才是最持久的动力。
 
