--- a/_posts/2013-10-23-war-horse.md
+++ b/_posts/2013-10-23-war-horse.md
@@ -4,7 +4,7 @@ title: "战马"
 modified: 2014-07-08 20:25:38 +0800
 tags: [电影]
 image:
-  feature: 
+  feature: 2013/1002.jpg
   credit: 
   creditlink: 
 comments: post-20131023-0
