--- a/_posts/2014-01-24-gravity.md
+++ b/_posts/2014-01-24-gravity.md
@@ -4,7 +4,7 @@ title: "地心引力"
 modified: 2014-07-08 21:37:51 +0800
 tags: [电影]
 image:
-  feature: 
+  feature: 2014/0102.jpg
   credit: 
   creditlink: 
 comments: post-20140124-0
