--- a/_posts/2014-02-17-weixin.md
+++ b/_posts/2014-02-17-weixin.md
@@ -4,7 +4,7 @@ title: "何以微信"
 modified: 2014-07-08 21:40:03 +0800
 tags: [App]
 image:
-  feature: 
+  feature: abstract-10.jpg
   credit: 
   creditlink: 
 comments: post-20140217-0
