--- a/_posts/2014-04-02-game.md
+++ b/_posts/2014-04-02-game.md
@@ -4,7 +4,7 @@ title: "潜伏之赤途"
 modified: 2014-07-08 22:12:49 +0800
 tags: [游戏, 网站, 音乐]
 image:
-  feature: 
+  feature: abstract-11.jpg
   credit: 
   creditlink: 
 comments: post-20140402-1
