--- a/_posts/2014-04-04-july-july.md
+++ b/_posts/2014-04-04-july-july.md
@@ -4,7 +4,7 @@ title: "July July"
 modified: 2014-07-08 23:05:38 +0800
 tags: [音乐]
 image:
-  feature: 
+  feature: abstract-11.jpg
   credit: 
   creditlink: 
 comments: post-20140404-0
