--- a/_posts/2014-04-02-you-zi-ku.md
+++ b/_posts/2014-04-02-you-zi-ku.md
@@ -4,7 +4,7 @@ title: "有字库"
 modified: 2014-07-08 22:10:45 +0800
 tags: [网站, 设计]
 image:
-  feature: 
+  feature: abstract-7.jpg
   credit: 
   creditlink: 
 comments: post-20140402-0
