--- a/_posts/2013-08-15-why-ruby.md
+++ b/_posts/2013-08-15-why-ruby.md
@@ -8,7 +8,7 @@ image:
   credit: 
   creditlink: 
 comments: post-20130815-0
-share: 
+share: true
 link: http://book.douban.com/subject/6756090/
 ---
 
