--- a/_posts/2014-04-04-july-july.md
+++ b/_posts/2014-04-04-july-july.md
@@ -8,7 +8,7 @@ image:
   credit: 
   creditlink: 
 comments: post-20140404-0
-share: 
+share: true
 link: http://music.163.com/#/artist?id=123825
 ---
 
