Publish one and update one

--- a/_posts/2014-09-11-tan-tuo-si.md
+++ b/_posts/2014-09-11-tan-tuo-si.md
@@ -1,13 +1,14 @@
 ---
 layout: post
 title: "潭拓一日"
+description: "潭拓一日，世已千年"
 modified: 2014-09-11 20:56:48 +0800
 tags: [心情]
 image:
   feature: 2014/0911.jpg
   credit: Aidi Stan
-  creditlink: http://aidistan.net
-comments: post-20140911-0
+  creditlink: 
+comments: post-20140911
 share: true
 link: 
 ---
