--- a/_posts/2014-09-11-tan-tuo-si.md
+++ b/_posts/2014-09-11-tan-tuo-si.md
@@ -1,16 +1,13 @@
 ---
 layout: post
 title: "潭拓一日"
-description: "潭拓一日，世已千年"
+description: "潭拓一日，世已千年。"
 modified: 2014-09-11 20:56:48 +0800
 tags: [心情]
 image:
   feature: 2014/0911.jpg
   credit: Aidi Stan
-  creditlink: 
 comments: post-20140911
-share: true
-link: 
 ---
 
 上午从组里的lecture逃出来，去了一趟潭拓寺。照来照去，相机里没留下几张，封图是幸存者之一。
