--- a/_posts/2014-09-16-chef.md
+++ b/_posts/2014-09-16-chef.md
@@ -1,15 +1,14 @@
 ---
 layout: post
 title: "Chef"
-description: "没有人可以拒绝美食的诱惑和爵士的摇摆"
+description: "没有人可以拒绝美食的诱惑和爵士的摇摆。"
 modified: 2014-09-16 19:55:43 +0800
 tags: [电影, 音乐]
 image:
   feature: 2014/0916.jpg
   credit: Mtime
-  creditlink: http://movie.mtime.com/204431/posters_and_images/4003889/
+  creditlink: http://movie.mtime.com/
 comments: post-20140916
-share: true
 link: http://movie.mtime.com/204431/
 ---
 
