--- a/_posts/2013-08-14-ear.md
+++ b/_posts/2013-08-14-ear.md
@@ -4,11 +4,10 @@ title: "邻居的耳朵"
 modified: 2014-07-07 10:56:53 +0800
 tags: [网站, 音乐]
 image:
-  feature: 2013/0802.jpg
+  feature: 2013/0814.jpg
   credit: 
   creditlink: 
-comments: post-20130814-0
-share: true
+comments: post-20130814
 link: http://ear.duomi.com/
 ---
 
