--- a/_posts/2013-10-23-war-horse.md
+++ b/_posts/2013-10-23-war-horse.md
@@ -7,8 +7,7 @@ image:
   feature: 2013/1002.jpg
   credit: 
   creditlink: 
-comments: post-20131023-0
-share: true
+comments: post-20131023
 link: http://movie.mtime.com/129572/
 ---
 
