--- a/_posts/2014-02-17-weixin.md
+++ b/_posts/2014-02-17-weixin.md
@@ -3,13 +3,7 @@ layout: post
 title: "何以微信"
 modified: 2014-07-08 21:40:03 +0800
 tags: [App]
-image:
-  feature: abstract-10.jpg
-  credit: 
-  creditlink: 
-comments: post-20140217-0
-share: true
-link: 
+comments: post-20140217
 ---
 
 一年多来手机里的微信都只是升级，却没怎么用。于是赶在不能远程回实验室电脑的蛇尾巴，把微信研究了一下。
