--- a/_posts/2014-04-01-you-zi-ku.md
+++ b/_posts/2014-04-01-you-zi-ku.md
@@ -3,12 +3,7 @@ layout: post
 title: "有字库"
 modified: 2014-07-08 22:10:45 +0800
 tags: [网站, 设计]
-image:
-  feature: abstract-7.jpg
-  credit: 
-  creditlink: 
-comments: post-20140402-0
-share: true
+comments: post-20140401
 link: http://www.youziku.com/
 ---
 
