--- a/_posts/2013-08-15-why-ruby.md
+++ b/_posts/2013-08-15-why-ruby.md
@@ -4,11 +4,10 @@ title: "松本行弘的程序世界"
 modified: 2014-07-07 11:48:37 +0800
 tags: [读书]
 image:
-  feature: 2013/0803.jpg
+  feature: 2013/0815.jpg
   credit: 
   creditlink: 
-comments: post-20130815-0
-share: true
+comments: post-20130815
 link: http://book.douban.com/subject/6756090/
 ---
 
