--- a/_posts/2014-01-24-gravity.md
+++ b/_posts/2014-01-24-gravity.md
@@ -3,12 +3,7 @@ layout: post
 title: "地心引力"
 modified: 2014-07-08 21:37:51 +0800
 tags: [电影]
-image:
-  feature: 2014/0102.jpg
-  credit: 
-  creditlink: 
-comments: post-20140124-0
-share: true
+comments: post-20140124
 link: http://movie.mtime.com/126366/
 ---
 
