--- a/_posts/2014-04-04-july-july.md
+++ b/_posts/2014-04-04-july-july.md
@@ -3,12 +3,7 @@ layout: post
 title: "July July"
 modified: 2014-07-08 23:05:38 +0800
 tags: [音乐]
-image:
-  feature: abstract-11.jpg
-  credit: 
-  creditlink: 
-comments: post-20140404-0
-share: true
+comments: post-20140404
 link: http://music.163.com/#/artist?id=123825
 ---
 
