--- a/_posts/2014-01-24-gravity.md
+++ b/_posts/2014-01-24-gravity.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Gravity"
+title: "地心引力"
 modified: 2014-07-08 21:37:51 +0800
 tags: [电影]
 comments: post-20140124
@@ -10,4 +10,3 @@ link: http://movie.mtime.com/126366/
 趁放假，在实验室里和少侠一起架设起投影仪和音响，终于在FIT1-108“放映室”看了似乎很高分的《地心引力》。
 
 可以从绚丽的场景和有趣的细节里看出导演的一片苦心，但是除了中间女主恍惚之间的那一场幻觉，似乎没什么其他吸引到我的。也许是因为马上就要回家过春节了吧~
-
