--- a/_posts/2011-11-28-our-songs.md
+++ b/_posts/2011-11-28-our-songs.md
@@ -6,7 +6,7 @@ modified: 2015-05-13 14:51:14 +0800
 tags: [心情]
 image:
   feature: 2011/1128.jpg
-  credit: Xi Yan
+  credit: 小溪同学
 comments: post-20111128
 ---
 
