--- a/_posts/2014-09-16-chef.md
+++ b/_posts/2014-09-16-chef.md
@@ -6,8 +6,8 @@ modified: 2014-09-16 19:55:43 +0800
 tags: [电影, 音乐]
 image:
   feature: 2014/0916.jpg
-  credit:
-  creditlink:
+  credit: 时光网
+  creditlink: http://movie.mtime.com/204431/posters_and_images/4003889/
 comments: post-20140916
 link: http://movie.mtime.com/204431/
 ---
