Fix a few typos

--- a/_posts/2011-11-28-our-songs.md
+++ b/_posts/2011-11-28-our-songs.md
@@ -120,17 +120,19 @@ comments: post-20111128
 
 我经常嘲笑她那个羽芒的长相比较傻，虽然其实我羽灵的造型根本就是标准一号。
 
-这样沉默爱你不知有多久
-
-我愿付出我的生命和所有
-
-我要你不顾一切跟我走
-
-去向这完美世界的爱和自由
-
-Fly with me, in the perfect world
-
-Go with me, just like a bird
+> 这样沉默爱你不知有多久
+>
+> 我愿付出我的生命和所有
+>
+> 我要你不顾一切跟我走
+>
+> 去向这完美世界的爱和自由
+>
+> Fly with me, in the perfect world
+>
+> Go with me, just like a bird
+>
+> <small>水木年华 ——《完美世界》</small>
 
 我越来越依赖每周上网的那点时间，能跟她一起网游实在是最幸福的事情。却没有料到，后来的后来，完美给我带来的快乐远远不及它带来的伤痛。
 
@@ -163,7 +165,7 @@ Go with me, just like a bird
 
 过程中的泰坦尼克“基”情动作，结束时的四小天鹅等等桥段，掌声雷动。
 
-因为有这么一个大节目，我们班也得益可以来了许多人可以观看全校在大礼堂举办的元旦演出。台下坐满了观众，我知道她此时也坐在我们班的席位上，努力而天才的演员们在台上台下，我在后台控制着音乐。
+因为有这么一个大节目，我们班也得益可以来许多人观看全校在大礼堂举办的元旦演出。台下坐满了观众，我知道她此时也坐在我们班的席位上，努力而天才的演员们在台上台下，我在后台控制着音乐。
 
 
 ### 13. 嬉戏曲
@@ -427,7 +429,7 @@ Go with me, just like a bird
 
 回到家里，当其他同学还在纠结专业选择时，我早已挣扎在完美与dota之间。白天要做完美的日常，晚上跟朋友一起开黑。日子过得很快，等到她回来的时候，我已是更倾向于dota了。跟她之间的小摩擦很难避免，归根结底于我早已对完美失去兴趣，而因她的缘由却在苦苦坚持。
 
-每次完美时，我都是努力把话题引到游戏之外，而她颇有一种将话题止于游戏的意味,那么地执着于完美。渐渐我不愿再上线。
+每次完美时，我都是努力把话题引到游戏之外，而她颇有一种将话题止于游戏的意味，那么地执着于完美。渐渐我不愿再上线。
 
 她也不怎么回我Email了，我们之间联系再一次达到低谷。
 
