--- a/_posts/2011-11-28-our-songs.md
+++ b/_posts/2011-11-28-our-songs.md
@@ -132,7 +132,7 @@ comments: post-20111128
 >
 > Go with me, just like a bird
 >
-> <small>水木年华 ——《完美世界》</small>
+> <small>—— 水木年华《完美世界》</small>
 
 我越来越依赖每周上网的那点时间，能跟她一起网游实在是最幸福的事情。却没有料到，后来的后来，完美给我带来的快乐远远不及它带来的伤痛。
 
