--- a/_posts/2014-04-04-july-july.md
+++ b/_posts/2014-04-04-july-july.md
@@ -14,5 +14,4 @@ July 特别擅长利用不断重复的简单节奏来诠释什么是幸福。一
 音乐，无须多言。
 
 > Don't talk, just listen.
-> <small>— Anonymous</small>
-
+> <small>—— Anonymous</small>
