--- a/_posts/2013-10-23-war-horse.md
+++ b/_posts/2013-10-23-war-horse.md
@@ -12,7 +12,7 @@ link: http://movie.mtime.com/129572/
 通过“乔伊”串起战争中几个不同身份的普通人的故事。
 
 > 《战马》具有典型的斯皮尔伯格风格，大气磅礴的配乐、加上唯美的摄影和厚重的原著故事，影片散发出文艺史诗的气场。
-> <small> — 时光网 </small>
+> <small>—— 时光网</small>
 
 片中没有所谓的善恶，有的只是一个个被战争无情卷入的普通人。几段故事中出场的军官所说的话仔细想来都挺有意思：
 
