--- a/_posts/2011-11-28-our-songs.md
+++ b/_posts/2011-11-28-our-songs.md
@@ -192,9 +192,9 @@ comments: post-20111128
 
 ### 15. 单车恋人
 
-在班上我们没有太多变化，即使我更加大胆地盯着她看，可她明明知道却从未有过暗暗的回应。我们的联系新增加了Email这种神奇的方式，这直接导致了我邮箱里至今静静躺着上千封来往邮件——我七她三。
+在班上我们没有太多变化，即使我更加大胆地盯着她看，可她明明知道却从未有过暗暗的回应。我们的联系新增加了 Email 这种神奇的方式，这直接导致了我邮箱里至今静静躺着上千封来往邮件——我七她三。
 
-我冲了Q币，为她我买情侣装，单车恋人。我们用QQ秀照了一张合影，至今为止唯一的合影，虽是虚拟。很久之后的一天，我发现她仍然用着我送她的那套QQ秀，还善意地提醒了她。为了一个搭讪的借口，丢了如此美好的纪念。
+我冲了Q币，为她和我买了套情侣装，单车恋人。我们用QQ秀照了一张合影，至今为止唯一的合影，虽是虚拟。很久之后的一天，我发现她仍然用着我送她的那套QQ秀，还善意地提醒了她。为了一个搭讪的借口，丢了如此美好的纪念。
 
 
 ### 16. 大喜宙
@@ -237,7 +237,7 @@ comments: post-20111128
 
 有一种不可控制的绝望。
 
-她说，如果我只是为了她而玩完美，就不要继续下去。一方面浪费时间，一方面又总是不欢而散。但若我不上完美，还怎样与她联系？我每天都有发email，可她几天回复一封的速度，怎么可能维护我们脆弱的感情？
+她说，如果我只是为了她而玩完美，就不要继续下去。一方面浪费时间，一方面又总是不欢而散。但若我不上完美，还怎样与她联系？我每天都有发 Email，可她几天回复一封的速度，怎么可能维护我们脆弱的感情？
 
 她说，我把感情看得太重，会让我们太累。她说有太多太多的事情比感情重要，学习、家人、朋友，但是不包括游戏。不过我知道，在她心中，我甚至还没有完美重要吧。
 
@@ -254,7 +254,7 @@ comments: post-20111128
 
 高二最后一次月考，应该是考得很差吧，只记得直接导致了我在家里上网的特权被剥夺。我更加地缺少机会，修补与她之间的间隙。
 
-暑假开始时，我们基本上只靠Email来往了，短信发不到两三个来回。即便我上游戏找她，她也总是借口老妈就在旁边而不再回我消息。
+暑假开始时，我们基本上只靠 Email 来往了，短信发不到两三个来回。即便我上游戏找她，她也总是借口老妈就在旁边而不再回我消息。
 
 我生日那天，她发来一个祝福短信后，也立马找了一个理由不再回复我短信。一切都表明，我们的感情名存实亡。
 
@@ -271,7 +271,7 @@ comments: post-20111128
 
 模仿她们女生间惯用的传纸条，我希望能够跟她改进下联系方式，而她的回复从来只是三言两语。
 
-那天的第六感太强烈了，我中午急急忙忙赶回家，偷偷摸到老妈的办公室。果不其然地收到了她的Email，是分手信。看完信时，自己并没怎么难过，反而是痛快夹杂着略微的遗憾，如此不干脆的感情结束也罢。
+那天的第六感太强烈了，我中午急急忙忙赶回家，偷偷摸到老妈的办公室。果不其然地收到了她的 Email，是分手信。看完信时，自己并没怎么难过，反而是痛快夹杂着略微的遗憾，如此不干脆的感情结束也罢。
 
 她在信里说她总是悲伤与冷漠，本希望借助我让她走出，但终究是不能。
 
@@ -293,7 +293,7 @@ comments: post-20111128
 
 ### 24. 其实不想走
 
-时不时的给她发封Email，而她总是半个月才会不痛不痒地回复那么短短的两句。
+时不时的给她发封 Email，而她总是半个月才会不痛不痒地回复那么短短的两句。
 
 她说完美交给了朋友替她玩，于是我上完美看到她在线跟她联系，她也可以说不是本人。我所能看到的，只是她的等级一路直升，远远甩开了我，一如在学习上。
 
@@ -301,7 +301,7 @@ comments: post-20111128
 
 高三寒假结束时，她回我信说，她狠下心把完美连安装文件都删了，怕自己会分心。她说之后不太可能上网了，这是最后一封邮件。
 
-那个学期，我大概每周都发过一封邮件，而她果然再也没有给过回音，仿佛我是自言自语一般。我独自穿梭在Email和完美之间，看着她所说的那个朋友将她号的等级一点点升高。在学校里，是那一种冷冷的关系，偶尔借来她笔记抄抄，她甚至都吝啬言词。
+那个学期，我大概每周都发过一封邮件，而她果然再也没有给过回音，仿佛我是自言自语一般。我独自穿梭在 Email 和完美之间，看着她所说的那个朋友将她号的等级一点点升高。在学校里，是那一种冷冷的关系，偶尔借来她笔记抄抄，她甚至都吝啬言词。
 
 总会莫名的烦躁，感觉一切都是那么的煎熬。不禁期盼高考尽早到来，将一切结束，不再见到她。
 
@@ -321,7 +321,7 @@ comments: post-20111128
 
 初时听人说她考得也不太理想，后来才知道是说去不了北京上海的那几所顶尖学校，她比我依旧是高出那么些分数。
 
-完美上的她回复了我的消息，我们又保持着仅有的Email联系。她安慰我不要太难过，要向自己今天觉得对不起的人证明自己，不让他们再一次失望。虽然感激她的鼓励，但是内心却非常清楚，她我的距离似乎又远了一步。
+完美上的她回复了我的消息，我们又保持着仅有的 Email 联系。她安慰我不要太难过，要向自己今天觉得对不起的人证明自己，不让他们再一次失望。虽然感激她的鼓励，但是内心却非常清楚，她和我的距离似乎又远了一步。
 
 上报志愿时，我一眼就看见了她的袋子。偷偷地抽出，竟然是去这个城市。我想她其实，是想避开任何与她有瓜葛的男生吧。有那么一丝丝冲动，想当场修改自己的志愿，终是忍住了。远距离未尝不是好事，不是说时间可以洗涤一切么？
 
@@ -336,9 +336,9 @@ comments: post-20111128
 
 黄昏副本推出大概有一段日子，但我们是直到高考后，才有机会赶上这个版本的一点小边角。很艰难很艰难地组上个大号带，我们第一次，第二次，第N次地尝试了那些最简单的副本。我们还是可以一起游戏，互相帮忙做做石头日常，但是只是游戏。
 
-她暑假中去云南旅游，将游戏帐号交给我代理。她答应回来会传给我照片。可她一回家，就跟我断了联系，照片始终是没有传给我。
+她暑假中去云南旅游，将游戏帐号交给我打理。她答应回来会传给我照片。可她一回家，就跟我断了联系，照片始终是没有传给我。
 
-我在她Qzone的相册里发现了名叫彩云之南的相册，需要密码验证，禁不住诱惑的我试了两把，没有通过。我猜测，内心却不承认，她上传照片是为了给某个谁看，很明显，不是我。
+我在她 Qzone 的相册里发现了名叫彩云之南的相册，需要密码验证，禁不住诱惑的我试了两把，没有通过。我猜测，内心却不承认，她上传照片是为了给某个谁看，很明显，那个人不是我。
 
 后来她说她是因为家里电脑被弟弟妹妹们欺负坏了，拿去维修，所以一直没有上线。当她这样回复我的邮件时，我已经收拾好行李，准备开始一段新的旅程。
 
@@ -349,9 +349,9 @@ comments: post-20111128
 
 大学生活最初的一段，五彩斑斓，除去最开始所谓的高班，一切都是万里无云。大一理论上是不能带电脑的，我只能趁着在图书馆阅览室做一些事情时，给她发信。
 
-一直到给她发的第四封信，才收到回音。她说她之前在军训，上网亦不方便。之后的Email联系渐渐趋于平常，我们交换了新的手机号码，互相加了飞信，鉴于她说她的短信有限。电子邮件依然是唯一的联系方式。
+一直到给她发的第四封信，才收到回音。她说她之前在军训，上网亦不方便。之后的 Email 联系渐渐趋于平常，我们交换了新的手机号码，互相加了飞信，鉴于她说她的短信有限。电子邮件依然是唯一的联系方式。
 
-那三个月的邮件，是整个文件夹中最工整的，她我轮流，一人一封地交叠着，直到寒假。
+那三个月的邮件，是整个文件夹中最工整的，她和我轮流，一人一封地交叠着，直到寒假。
 
 信中她说，如我所担心的，班级内和社团里向她表达倾慕的男生很多，我不知道怎么回答。不论是早在高中，还是到后来的几年，每次她告诉我有男生对她表示爱慕时，我都不知所措，没法回应，只能让她骗骗人家说有男朋友。
 
@@ -369,19 +369,19 @@ comments: post-20111128
 
 ### 30. 朋友
 
-寒假回到家里，我们似乎成了普通的好朋友。完美上碰到了会一起玩玩副本，Email里聊聊聚会怎么办。
+寒假回到家里，我们似乎成了普通的好朋友。完美上碰到了会一起玩玩副本，Email 里聊聊聚会怎么办。
 
 我努力的在飞信上将大多数人加齐，方便通知聚会，也曾叫她上QQ群里来讨论。她说已经不怎么上QQ了，QQ太吵，真正要联系的几个人都在飞信上。
 
-我想，用历史的眼光来看待这一句话，它就标志着我们之间Email时代的没落而飞信时代的起飞，再往之前的则是QQ时代和短信时代。
+我想，用历史的眼光来看待这一句话，它就标志着我们之间 Email 时代的没落而飞信时代的起飞，再往之前的则是QQ时代和短信时代。
 
 我也是从那年开始，了解到她每年春节都要回老家。
 
 聚会的时间更改再三，终于定在年后举行，赶上她从老家回来。一切没有什么特别，一如普通的同学聚会。
 
-她们寒假结束得早，我还在家中时她就赶回学校报道。新学期她的课程很多，不过值得高兴的是她的校园网终于可以正常使用了，可以每天跟我飞信聊天，发Email，虽然完美很卡。
+她们寒假结束得早，我还在家中时她就赶回学校报道。新学期她的课程很多，不过值得高兴的是她的校园网终于可以正常使用了，可以每天跟我飞信聊天，发 Email，虽然完美很卡。
 
-或许是乐极生悲，那天跟她发的Email封数太多，网易都心生怨气吧，她跟我说要利用好她们那自主起停的网，周二周三周四都不再上网了。
+或许是乐极生悲，那天跟她发的 Email 封数太多，网易都心生怨气吧，她跟我说要利用好她们那自主起停的网，周二周三周四都不再上网了。
 
 
 ### 31. I Want It That Way
@@ -423,7 +423,7 @@ comments: post-20111128
 
 ### 34. 天使也一样
 
-暑假临近时，我们又有了几封Email的交流。得知我比她早回家，她把她帐号、新改的密码、密保卡发给我，叮嘱我替她日常。我上她号，发现她的角色整了容，和完美上那些红男绿女一个风格，回忆起她羽灵号最初跟我一起任务时的小清新，顿感时过境迁。
+暑假临近时，我们又有了几封 Email 的交流。得知我比她早回家，她把她帐号、新改的密码、密保卡发给我，叮嘱我替她日常。我上她号，发现她的角色整了容，和完美上那些红男绿女一个风格，回忆起她羽灵号最初跟我一起任务时的小清新，顿感时过境迁。
 
 成绩出来，那个学期的加权有点高，排名进步得很快。
 
@@ -431,9 +431,9 @@ comments: post-20111128
 
 每次完美时，我都是努力把话题引到游戏之外，而她颇有一种将话题止于游戏的意味，那么地执着于完美。渐渐我不愿再上线。
 
-她也不怎么回我Email了，我们之间联系再一次达到低谷。
+她也不怎么回我 Email 了，我们之间联系再一次达到低谷。
 
-我曾怀疑她没有收到我的Email，偷偷登录她的邮箱查看。却发现我的信件全是已读，更是发现了她跟好友的邮件。我忍不住看了一眼，里面她还摘录了和某男生的短信，其中她回忆到她高中年代早上坐公交车的事情。我也是那时才明白，为什么我高中上学想尽办法也没法碰见她。
+我曾怀疑她没有收到我的 Email，偷偷登录她的邮箱查看。却发现我的信件全是已读，更是发现了她跟好友的邮件。我忍不住看了一眼，里面她还摘录了和某男生的短信，其中她回忆到她高中年代早上坐公交车的事情。我也是那时才明白，为什么我高中上学想尽办法也没法碰见她。
 
 我有一点点想开，其实她也有那么傻傻的一面，只不过对象不是我。
 
@@ -457,7 +457,7 @@ comments: post-20111128
 
 有时我实在不服气，向她指出一个游戏又何必花费那么多时间。她却总是说，完美不过是她消磨时间的一个手段，如果她升到100级，那么也就无所求，不会再上了。类似的话，她说过太多太多遍，只是后面跟随的目标一步步地变高。高中的时候，她说升到70级就够；刚大一的时候，她说想到89入仙体验体验……
 
-为了跟她保持联系，也为了保持住我们最大的公共话题，我一直苦苦地跟随着她的步伐，不情愿地玩，难免心生怨气，跟她争吵，让她烦心。。
+为了跟她保持联系，也为了保持住我们最大的公共话题，我一直苦苦地跟随着她的步伐，不情愿地玩，难免心生怨气，跟她争吵，让她烦心。
 
 我这样做，给了她很大的压力吧，难怪她很多时候不愿意理我。记得许多日子之后，在我彻底放弃完美已许久的一天，在手机报上，我看到这样一句话，最深沉的爱，是不给人以负担的。我很喜欢这句话，觉得说得很对，这恰恰是我一直做得不好的。
 
@@ -516,7 +516,7 @@ comments: post-20111128
 
 ### 41. V3<small>（改变自贝多芬《悲怆奏鸣曲》第三乐章）</small>
 
-暑假后的新学期，在与她的联系上，没有与上一个学期有什么分别。我总喜欢用周期性这个词来形容。她没有再让我写论文，只是有时候帮她查查答案，更多的时候是上完美陪她她副本。
+暑假后的新学期，在与她的联系上，没有与上一个学期有什么分别。我总喜欢用周期性这个词来形容。她没有再让我写论文，只是有时候帮她查查答案，更多的时候是上完美陪她下副本。
 
 我自己重拾上个学期她放弃后，就没怎么再上的魔兽世界，练了一个小术士，很孤独，很艰辛。但总算有了与完美抗衡的东西，当然还有dota这个神器。它们将我心中，仿佛她化身般的完美赶了出去。
 
@@ -524,7 +524,7 @@ comments: post-20111128
 
 自己越是繁忙，想念她的时间自然也越少了。
 
-她有一门信息检索课程，在阅览室上，因为几乎上不了所有的网站，除了163邮箱，所以她给我写起了Email。我也是后来才惊醒，她总是这样，在所有的其他的去路都堵死时，或者是需要帮助而没有其他更好的选项时，才会想起我这个最后的选择。
+她有一门信息检索课程，在阅览室上，因为几乎上不了所有的网站，除了163邮箱，所以她给我写起了 Email。我也是后来才惊醒，她总是这样，在所有的其他的去路都堵死时，或者是需要帮助而没有其他更好的选项时，才会想起我这个最后的选择。
 
 
 ### 42. 爱要怎么说出口
@@ -544,7 +544,7 @@ comments: post-20111128
 
 ### 43. Just One Last Dance
 
-与她的email联系基本没有断过，不过很多时候其实已经不能算是通信，因为我也不说什么近况，只是固执地把一些自己喜爱的视频、歌曲什么的介绍给她，不求回信。她也很配合，从未回过。
+与她的 Email 联系基本没有断过，不过很多时候其实已经不能算是通信，因为我也不说什么近况，只是固执地把一些自己喜爱的视频、歌曲什么的介绍给她，不求回信。她也很配合，从未回过。
 
 直到一天，她主动飞信我，说她看了MT之后，突然对魔兽世界产生了浓厚兴趣，打算来玩。其实她不知道，她找我的时候，我那个术士自寒假已经被我抛弃了两三个月，再也没有上过，79到80还是我同学帮我练到的。本打算放弃游戏的我，又重回魔兽的怀抱。
 
