--- a/_posts/2013-08-15-why-ruby.md
+++ b/_posts/2013-08-15-why-ruby.md
@@ -2,7 +2,7 @@
 layout: post
 title: "松本行弘的程序世界"
 modified: 2014-07-07 11:48:37 +0800
-tags: [读书]
+tags: [读书, 编程]
 image:
   feature: 2013/0815.jpg
 comments: post-20130815
