Update tags of posts

--- a/_posts/2015-08-27-163-mail-v6-simple.md
+++ b/_posts/2015-08-27-163-mail-v6-simple.md
@@ -3,7 +3,7 @@ layout: post
 title: 网易邮箱 6.0 简约版
 description: 全新的布局风格，真是让人作牛作马，欲罢不能～
 modified: 2015-08-27 23:38:37 +0800
-tags: [网站, 互联网]
+tags: [网站, 产品]
 comments: post-20150827
 link: http://mail.163.com
 ---
