--- a/_posts/2016-04-08-jianliao.md
+++ b/_posts/2016-04-08-jianliao.md
@@ -42,3 +42,5 @@ comments: post-20160408
 如果简聊最初选择纷云那样的道路，整合进自家的协作平台，出一个带有及时通讯功能的高级企业版，也许 `talk-ai` 这个项目还能继续活下去。但它肯定无法聚拢这样有创造力的团队，世间也只会多一个不起眼的模块，少了一个这么惊艳的简聊。
 
 奋力一博的 v3，华丽转身的结束，未尝不是一个好的终点。
+
+> 本文亦发表在 [简聊为何被放弃？ - Aidi Stan 的回答 - 知乎](https://www.zhihu.com/question/42261175/answer/94319987)
