Refine the template

--- a/_posts/2012-10-25-box-game.md
+++ b/_posts/2012-10-25-box-game.md
@@ -30,4 +30,4 @@ comments: post-20121025
 
 程序能够自动找出解法，并进行三维演示：
 
-<img src="/assets/images/2012/1025-1.gif" class="am-img-responsive" alt=""/>
+<img src="{{ site.baseurl }}/assets/images/2012/1025-1.gif" class="am-img-responsive" alt=""/>
