--- a/_posts/2016-01-04-justice.md
+++ b/_posts/2016-01-04-justice.md
@@ -20,7 +20,7 @@ mathjax: true
 
 $$完全平均主义 \approx 平等 < 公平 < 公正 < 正义 \approx 最大社会效用$$
 
-<center><img src="/assets/images/2016/0104.jpg" class="am-img-responsive" alt=""/></center>
+<center><img src="{{ site.baseurl }}/assets/images/2016/0104.jpg" class="am-img-responsive" alt=""/></center>
 
 然而理想与现实有着巨大的鸿沟，在没有绝对正义的情况下，亨利马只能转而追求另一种不影响正义的公平： 信息公平（对称）。广义上的信息公平有两层含义：
 
