--- a/_posts/2014-07-20-xian-mei.md
+++ b/_posts/2014-07-20-xian-mei.md
@@ -7,16 +7,16 @@ tags: [设计]
 comments: post-20140720
 ---
 
-EVE 中的好友**“杨叉叉”**离职创业，去开一家羊汤店，请我帮他设计一个招牌，要求如下：
+EVE 中的好友 **“杨叉叉”** 离职创业，去开一家羊汤店，请我帮他设计一个招牌，要求如下：
 
-- **“鲜美”**两个字，为大字体，位于招牌中间或偏左，可以是行书或楷书，辨识起来无难，体现出我店的传统风格
-- **“羊汤店”**三个字，为小字体，位于招牌右下角，喜欢比较小清新的字体
+- **“鲜美”** 两个字，为大字体，位于招牌中间或偏左，可以是行书或楷书，辨识起来无难，体现出我店的传统风格
+- **“羊汤店”** 三个字，为小字体，位于招牌右下角，喜欢比较小清新的字体
 - 底色，考虑鲜红色，字体为白色
 - 总体感觉：传统美味，现代工艺，良心食材，精心制作
 
 最终的设计结果如下：
 
-<img src="/assets/images/2014/0720.png" class="am-img-responsive" alt=""/>
+<img src="{{ site.baseurl }}/assets/images/2014/0720.png" class="am-img-responsive" alt=""/>
 
 - 颜色：朱砂色，荼白色
 - 字体：经典颜繁体，华康娃娃体
