--- a/_posts/2011-11-28-our-songs.md
+++ b/_posts/2011-11-28-our-songs.md
@@ -4,8 +4,8 @@ title: "我们的歌"
 description: "寒冷的冬日，深深的夜里，我坐在电脑前轻轻地敲击着键盘，心中回荡着的却是我们的旋律，那是一首我们的歌"
 modified: 2015-05-13 14:51:14 +0800
 tags: [心情]
-image:
-  feature: 2011/1128.jpg
+feature:
+  image: 2011/1128.jpg
   credit: 小溪同学
 comments: post-20111128
 ---
