--- a/_posts/2012-10-25-box-game.md
+++ b/_posts/2012-10-25-box-game.md
@@ -4,8 +4,8 @@ title: Box Game
 description: 广度优先搜索算法的三维演示程序
 modified: 2015-06-20 09:22:18 +0800
 tags: [游戏]
-image:
-  feature: 2012/1025.png
+feature:
+  image: 2012/1025.png
 comments: post-20121025
 ---
 
