--- a/_posts/2014-09-11-tan-tuo-si.md
+++ b/_posts/2014-09-11-tan-tuo-si.md
@@ -4,8 +4,8 @@ title: "潭拓一日"
 description: "潭拓一日，世已千年。"
 modified: 2014-09-11 20:56:48 +0800
 tags: [心情]
-image:
-  feature: 2014/0911.jpg
+feature:
+  image: 2014/0911.jpg
   credit: Aidi Stan
 comments: post-20140911
 ---
