--- a/_posts/2013-08-15-why-ruby.md
+++ b/_posts/2013-08-15-why-ruby.md
@@ -3,8 +3,8 @@ layout: post
 title: "松本行弘的程序世界"
 modified: 2014-07-07 11:48:37 +0800
 tags: [读书, 极客]
-image:
-  feature: 2013/0815.jpg
+feature:
+  image: 2013/0815.jpg
 comments: post-20130815
 link: http://book.douban.com/subject/6756090/
 ---
