--- a/_posts/2013-10-23-war-horse.md
+++ b/_posts/2013-10-23-war-horse.md
@@ -3,8 +3,8 @@ layout: post
 title: "战马"
 modified: 2014-07-08 20:25:38 +0800
 tags: [电影]
-image:
-  feature: 2013/1002.jpg
+feature:
+  image: 2013/1002.jpg
 comments: post-20131023
 link: http://movie.mtime.com/129572/
 ---
