--- a/_posts/2016-07-02-小手拉大手.md
+++ b/_posts/2016-07-02-小手拉大手.md
@@ -9,12 +9,12 @@ comments: post-20160702
 
 <div class="am-margin am-text-center">
   <audio controls autoplay loop>
-    <source src="{{ site.baseurl }}/assets/audios/xiao-shou-la-da-shou.ogg" type="audio/ogg">
-    <source src="{{ site.baseurl }}/assets/audios/xiao-shou-la-da-shou.mp3" type="audio/mpeg">
+    <source src="{{ site.baseurl }}/assets/audios/小手拉大手.ogg" type="audio/ogg">
+    <source src="{{ site.baseurl }}/assets/audios/小手拉大手.mp3" type="audio/mpeg">
     Your browser does not support the audio tag.
     </audio>
 </div>
 
 经过九九八十一难，新培师妹硕士毕业啦。三人一蝉，录音留念～
 
-<iframe src="{{ site.baseurl }}/assets/audios/xiao-shou-la-da-shou.pdf" width="100%" height="800"></iframe>
+<iframe src="{{ site.baseurl }}/assets/audios/小手拉大手.pdf" width="100%" height="800"></iframe>
