--- a/_posts/2016-12-26-2016年度阅读清单.md
+++ b/_posts/2016-12-26-2016年度阅读清单.md
@@ -4,6 +4,7 @@ title: 2016 年度阅读清单
 description: 回顾一下 2016 年我都在读什么
 modified: 2016-12-26 16:54:29 +0800
 tags: [读书]
+comments: post-20161226
 toc: true
 ---
 
